--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    Silence is gold!
+    <a href="/about.html">Silence is gold!</a>
 </body>
 </html>
