--- a/calculator.html
+++ b/calculator.html
@@ -6,33 +6,49 @@
   <title>Calculator</title>
   <style>
     body { font-family: Arial, sans-serif; margin: 40px; }
-    .calculator { display: flex; flex-direction: column; max-width: 300px; margin: auto; padding: 24px; border-radius: 8px; background: #fafafa; }
+    .layout { display: flex; align-items: flex-start; gap: 10px; justify-content: center; flex-wrap: wrap; }
+    .calculator { display: flex; flex-direction: column; max-width: 300px; padding: 24px; border-radius: 8px; background: #fafafa; }
     label { display: block; margin-bottom: 8px; font-weight: bold; }
-    input[type="number"] { width: 100%; padding: 8px; margin-bottom: 16px; font-size: 1rem; }
+    input[type="number"] { padding: 8px; margin-bottom: 16px; font-size: 1rem; }
     .result { font-size: 1.2rem; font-weight: bold; margin-top: 16px; color: #2a7a2a; }
   </style>
 </head>
 <body>
-  <div class="calculator">
-    <label for="price">Price (PLN):</label>
-    <input type="number" id="price" min="0" step="any"  value="600000" />
+  <div class="layout">
+    <div class="calculator">
+      <label for="price">Price (PLN):</label>
+      <input type="number" id="price" min="0" step="any"  value="600000" />
 
-    <label for="translator">Notary translator (PLN):</label>
-    <input type="number" id="translator" min="0" step="any" value="1200" />
+      <label for="translator">Notary translator (PLN):</label>
+      <input type="number" id="translator" min="0" step="any" value="1200" />
 
-    <label for="notary">Notary (%):</label>
-    <input type="number" id="notary" min="0" step="any" value="0.5" />
+      <label for="notary">Notary (%):</label>
+      <input type="number" id="notary" min="0" step="any" value="0.5" />
 
-    <label for="appraisal">Оценка недвижимости (PLN):</label>
-    <input type="number" id="appraisal" min="0" step="any" value="1500" />
+      <label for="appraisal">Оценка недвижимости (PLN):</label>
+      <input type="number" id="appraisal" min="0" step="any" value="1500" />
 
-    <label for="insurance">Bank insurance (PLN):</label>
-    <input type="number" id="insurance" min="0" step="any" value="1000" />
+      <label for="insurance">Bank insurance (PLN):</label>
+      <input type="number" id="insurance" min="0" step="any" value="1000" />
 
-    <label for="realtor">Rial estate (%):</label>
-    <input type="number" id="realtor" min="0" step="any" value="4" />
+      <label for="realtor">Rial estate (%):</label>
+      <input type="number" id="realtor" min="0" step="any" value="4" />
 
-    <div class="result">Result: <span id="result-amount"></span>0</div>
+      <div class="result">Result: <span id="result-amount-1"></span>0</div>
+    </div>
+
+    <div class="calculator">
+      <label for="bank">Bank (%):</label>
+      <input type="number" id="bank" min="0" step="any" value="6.5" />
+
+      <label for="month">Month:</label>
+      <input type="number" id="month" min="0" step="any" value="24" />
+
+      <label for="pay-per-month">Pay per month (PLN):</label>
+      <input type="number" id="pay-per-month" min="0" step="any" value="2000" />
+
+      <div class="result">Result: <span id="result-amount"></span>0</div>
+    </div>
   </div>
   <script>
     const priceInput = document.getElementById('price');
@@ -41,7 +57,7 @@
     const appraisalInput = document.getElementById('appraisal');
     const insuranceInput = document.getElementById('insurance');
     const realtorInput = document.getElementById('realtor');
-    const resultElement = document.getElementById('result-amount');
+    const resultElement = document.getElementById('result-amount-1');
 
     function calculate() {
         const price = parseFloat(priceInput.value) || 0;
